--- a/index.html
+++ b/index.html
@@ -17,32 +17,37 @@
 <body>
 <h1>Device Motion and Rotation Demo</h1>
 <div id="output">
-    <p>Acceleration (m/s²):</p>
-    <p id="accelerationX">X: </p>
-    <p id="accelerationY">Y: </p>
-    <p id="accelerationZ">Z: </p>
-    <p>Rotation (degrees):</p>
-    <p id="rotationAlpha">Alpha: </p>
-    <p id="rotationBeta">Beta: </p>
-    <p id="rotationGamma">Gamma: </p>
+    <p>Distance Traveled (m):</p>
+    <p id="distanceX">X: </p>
+    <p id="distanceY">Y: </p>
+    <p id="distanceZ">Z: </p>
 </div>
 
 <script>
+    var lastTimestamp = null;
+    var velocity = { x: 0, y: 0, z: 0 };
+    var displacement = { x: 0, y: 0, z: 0 };
+
     window.addEventListener("devicemotion", handleMotion, true);
-    window.addEventListener("deviceorientation", handleOrientation, true);
 
     function handleMotion(event) {
         var acceleration = event.accelerationIncludingGravity;
-        document.getElementById("accelerationX").textContent = "X: " + acceleration.x.toFixed(2);
-        document.getElementById("accelerationY").textContent = "Y: " + acceleration.y.toFixed(2);
-        document.getElementById("accelerationZ").textContent = "Z: " + acceleration.z.toFixed(2);
-    }
+        var currentTimestamp = Date.now();
+        if (lastTimestamp) {
+            var timeDifference = (currentTimestamp - lastTimestamp) / 1000; // Convert to seconds
+            velocity.x += acceleration.x * timeDifference;
+            velocity.y += acceleration.y * timeDifference;
+            velocity.z += acceleration.z * timeDifference;
 
-    function handleOrientation(event) {
-        var rotation = event.alpha != null ? event : event.accelerationIncludingGravity;
-        document.getElementById("rotationAlpha").textContent = "Alpha: " + rotation.alpha.toFixed(2);
-        document.getElementById("rotationBeta").textContent = "Beta: " + rotation.beta.toFixed(2);
-        document.getElementById("rotationGamma").textContent = "Gamma: " + rotation.gamma.toFixed(2);
+            displacement.x += velocity.x * timeDifference;
+            displacement.y += velocity.y * timeDifference;
+            displacement.z += velocity.z * timeDifference;
+
+            document.getElementById("distanceX").textContent = "X: " + displacement.x.toFixed(2);
+            document.getElementById("distanceY").textContent = "Y: " + displacement.y.toFixed(2);
+            document.getElementById("distanceZ").textContent = "Z: " + displacement.z.toFixed(2);
+        }
+        lastTimestamp = currentTimestamp;
     }
 </script>
 </body>
