--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Accelerometer Calibration</title>
+<title>Accelerometer Data</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -15,50 +15,25 @@
 </style>
 </head>
 <body>
-<h1>Accelerometer Calibration</h1>
+<h1>Accelerometer Data</h1>
 <div id="instructions">
-    <p>Please hold the phone flat on your palm or keep the phone on a flat surface in a stationary position for calibration.</p>
+    <p>Please hold the phone flat on your palm or keep the phone on a flat surface in a stationary position.</p>
 </div>
 <div id="output">
-    <p>Calibrating...</p>
+    <p>Acceleration along the X-axis: <span id="accelerationX">0</span></p>
+    <p>Acceleration along the Y-axis: <span id="accelerationY">0</span></p>
 </div>
 
 <script>
     if ('Accelerometer' in window) {
         const acl = new Accelerometer({ frequency: 60 });
-        let calibrationData = [];
-        let calibrationDuration = 10000; // Calibration duration in milliseconds (10 seconds)
-        let calibrationCompleted = false;
 
         acl.addEventListener("reading", function() {
-            if (!calibrationCompleted) {
-                calibrationData.push({ x: acl.x, y: acl.y });
-            } else {
-                document.getElementById("accelerationX").textContent = acl.x.toFixed(2);
-                document.getElementById("accelerationY").textContent = acl.y.toFixed(2);
-            }
+            document.getElementById("accelerationX").textContent = acl.x.toFixed(2);
+            document.getElementById("accelerationY").textContent = acl.y.toFixed(2);
         });
 
-        setTimeout(() => {
-            if (calibrationData.length > 0) {
-                let sumX = calibrationData.reduce((acc, curr) => acc + curr.x, 0);
-                let sumY = calibrationData.reduce((acc, curr) => acc + curr.y, 0);
-                let avgX = sumX / calibrationData.length;
-                let avgY = sumY / calibrationData.length;
-
-                document.getElementById("output").innerHTML = `
-                    <p>Calibration complete.</p>
-                    <p>Average X-axis value: ${avgX.toFixed(2)}</p>
-                    <p>Average Y-axis value: ${avgY.toFixed(2)}</p>
-                    <p>You can now use the sensor.</p>
-                `;
-
-                calibrationCompleted = true;
-                acl.start();
-            } else {
-                document.getElementById("output").innerHTML = `<p>No data collected for calibration.</p>`;
-            }
-        }, calibrationDuration);
+        acl.start();
     } else {
         console.error('Accelerometer not supported.');
     }
