--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 <body>
 <h1>Accelerometer Calibration and Data</h1>
 <div id="output">
-    <p>Acceleration along the X-axis: <span id="accelerationX">0</span></p>
-    <p>Acceleration along the Y-axis: <span id="accelerationY">0</span></p>
+    <p id="accelerationXDisplay">Acceleration along the X-axis: <span id="accelerationX">0</span></p>
+    <p id="accelerationYDisplay">Acceleration along the Y-axis: <span id="accelerationY">0</span></p>
 </div>
 
 <script>
     if ('Accelerometer' in window) {
         const acl = new Accelerometer({ frequency: 60 });
         let calibrationData = [];
-        let calibrationDuration = 1000; // Calibration duration in milliseconds (5 seconds)
+        let calibrationDuration = 5000; // Calibration duration in milliseconds (5 seconds)
         let calibrationCompleted = false;
+        let avgX = 0;
+        let avgY = 0;
 
         acl.addEventListener("reading", function() {
             if (!calibrationCompleted) {
                 calibrationData.push({ x: acl.x, y: acl.y });
             } else {
-                document.getElementById("accelerationX").textContent = acl.x.toFixed(2);
-                document.getElementById("accelerationY").textContent = acl.y.toFixed(2);
+                document.getElementById("accelerationX").textContent = (acl.x - avgX).toFixed(2);
+                document.getElementById("accelerationY").textContent = (acl.y - avgY).toFixed(2);
             }
         });
 
@@ -41,10 +43,10 @@
             if (calibrationData.length > 0) {
                 let sumX = calibrationData.reduce((acc, curr) => acc + curr.x, 0);
                 let sumY = calibrationData.reduce((acc, curr) => acc + curr.y, 0);
-                let avgX = sumX / calibrationData.length;
-                let avgY = sumY / calibrationData.length;
+                avgX = sumX / calibrationData.length;
+                avgY = sumY / calibrationData.length;
 
-                document.getElementById("output").innerHTML += `
+                document.getElementById("output").innerHTML = `
                     <div id="calibrationResults">
                         <p>Calibration complete.</p>
                         <p>Average X-axis value: ${avgX.toFixed(2)}</p>
