--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     if ('Accelerometer' in window) {
         const acl = new Accelerometer({ frequency: 60 });
         let calibrationData = [];
-        let calibrationDuration = 5000; // Calibration duration in milliseconds (5 seconds)
+        let calibrationDuration = 1000; // Calibration duration in milliseconds (5 seconds)
         let calibrationCompleted = false;
         let avgX = 0;
         let avgY = 0;
@@ -34,8 +34,12 @@
             if (!calibrationCompleted) {
                 calibrationData.push({ x: acl.x, y: acl.y });
             } else {
-                document.getElementById("accelerationX").textContent = (acl.x - avgX).toFixed(2);
-                document.getElementById("accelerationY").textContent = (acl.y - avgY).toFixed(2);
+                // Calibrate the accelerometer data
+                let calibratedX = acl.x - avgX;
+                let calibratedY = acl.y - avgY;
+
+                document.getElementById("accelerationX").textContent = calibratedX.toFixed(2);
+                document.getElementById("accelerationY").textContent = calibratedY.toFixed(2);
             }
         });
 
